<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".tracker">

    <ImageButton
        android:id="@+id/bmi_button"
        android:layout_width="135dp"
        android:layout_height="100dp"
        android:background="#E4EFFF"
        android:contentDescription="@string/bmilogofinal"
        android:tint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bmi_logo" />

    <ImageButton
        android:id="@+id/report_button"
        android:layout_width="135dp"
        android:layout_height="100dp"
        android:background="#E4EFFF"
        android:contentDescription="@string/reportlogofinal"
        android:tint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bmi_button"
        app:layout_constraintTop_toBottomOf="@+id/sugarSubmit"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/reports_logo" />

    <ImageButton
        android:id="@+id/setting_button"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#E4EFFF"
        android:contentDescription="@string/settinglogofinal"
        android:tint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/report_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/settings_logo" />

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="555dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <Button
            android:id="@+id/tracker1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="-->   Sugar Tracker"
            android:textAlignment="textStart" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>